--- a/src/package.json
+++ b/src/package.json
@@ -3,6 +3,10 @@
     "tailwindcss": "^3.4.16"
   },
   "scripts": {
-    "build": "tailwindcss -i ./static/css/input.css -o ./static/css/output.css --minify"
+    "build": "tailwindcss -i ./static/css/input.css -o ./static/css/output.css --minify",
+    "dev": "tailwindcss -i ./static/css/input.css -o ./static/css/output.css --watch"
+  },
+  "dependencies": {
+    "daisyui": "^4.12.14"
   }
 }
