--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     restart: unless-stopped
 
   django:
-    build: .
+    build: src
     container_name: django
     ports:
       - "8000:8000"
@@ -18,6 +18,10 @@ services:
     depends_on:
       - postgres
     restart: unless-stopped
+    command: >
+      sh -c "python manage.py migrate &&
+             python manage.py collectstatic --noinput &&
+             gunicorn --bind 0.0.0.0:8000 core.wsgi:application"
 
   caddy:
     image: caddy:latest
