--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,9 @@ services:
     restart: unless-stopped
 
   django:
-    build: src
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: django
     ports:
       - "8000:8000"
