--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,7 @@ services:
       - ./src/media:/code/media
     restart: unless-stopped
     command: >
-      sh -c "npx tailwindcss -i ./src/static/input.css -o ./src/static/output.css --minify &&
-             python manage.py migrate &&
+      sh -c "python manage.py migrate &&
              python manage.py collectstatic --noinput &&
              gunicorn --bind 0.0.0.0:8000 core.wsgi:application"
 
