Add deployment workflow and test environment setup
Introduce a new GitHub Actions workflow for deploying to master and development branches. Add "docker-compose.dev.yml" to configure the development environment. Update the Caddyfile to support reverse proxy for the test environment. This setup facilitates automated and streamlined deployments.

--- a/src/caddy/Caddyfile
+++ b/src/caddy/Caddyfile
@@ -10,3 +10,12 @@ https://overtaxedonline.com {
         file_server
     }
 }
+
+https://test.overtaxedonline.com {
+    reverse_proxy django-test:8000
+
+    handle_path /static/* {
+        root * /srv/static-test
+        file_server
+    }
+}
