--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   django-dev:
     build:
@@ -10,12 +8,12 @@ services:
       - "8001:8000"
     env_file: .env.test
     volumes:
-      - ./src:/code
       - ./src/staticfiles:/code/staticfiles
       - ./src/media:/code/media
     restart: unless-stopped
     command: >
-      sh -c "python manage.py migrate &&
+      sh -c "python manage.py migrate && 
+             python manage.py collectstatic --noinput && 
              python manage.py runserver 0.0.0.0:8000"
 
   caddy:
