Use environment variables for Caddy configuration.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
 
   caddy:
     image: caddy:latest
+    env_file:
+      - .env
     container_name: caddy
     volumes:
       - ./src/caddy/Caddyfile:/etc/caddy/Caddyfile
